Fix and add a bunch of junk. See #86